--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^6.3.0",
     "aos": "^3.0.0-beta.6",
+    "framer-motion": "^6.3.0",
     "react": "^18.0.0",
+    "react-background-slider": "^2.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0"
